Inserimento della pseudo tabella File con creazione api + Swagger
